# bitcoin_explorer

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: CI-CD.yaml  ci-cd.yml
WebstormProjects/: .gitignore  Dockerfile  README.md  angular.json  cypress.json  karma.conf.js  package-lock.json  package.json  server.js
WebstormProjects/src/: index.html  proxy.conf.json
WebstormProjects/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  block.service.ts  client.service.ts  record.model.ts
WebstormProjects/src/app/block-list/: block-list.component.css  block-list.component.html  block-list.component.ts
WebstormProjects/src/app/client-list/: client-list.component.html  client-list.component.ts
WebstormProjects/src/template/compact-book-quotes/: LICENSE.txt  README.md
WebstormProjects/src/template/compact-book-quotes/src/: index.html  style.sass
client/: Cargo.toml  dockerfile  version.txt
client/src/: blocks_data.rs  blocks_info.rs  blocks_model.rs  database_op.rs  init_database.rs  main.rs  news_info.rs  news_model.rs
mysql_api/: .gitignore  Cargo.toml  Procfile  dockerfile
mysql_api/src/: db.rs  main.rs  model.rs
