[default]
address = "0.0.0.0"
port = { value = 8000, to = "env::PORT" }

[package]
name = "mysql_api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "20.0.0"
tokio = { version = "1", features = ["full"] }
funty = { version = "3.0.0-rc2" }
